--- a/public_html/experiencia.html
+++ b/public_html/experiencia.html
@@ -6,11 +6,50 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Evaluacion Final</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Prueba final del modulo de html">
     </head>
     <body>
-        <div>TODO write content</div>
+        <header>
+        <img src="img/LOGO.svg"/>
+            <h1>Hoja de Vida</h1>
+            <h2>Rangel Raul Alvarado</h2>
+            <h3>
+            Nacionalidad: Panameño<br>
+            Fecha de nacimiento:  6 de febrero de 1960
+            </h3>
+        </header>
+        
+       <nav>
+           <a href="index.html">Inicio</a> |
+           <a href="educacion.html">Educación</a> |
+           <a href="experiencia.html">Experiencia</a>
+       </nav>
+        <h2>
+            <strong>Experiencia</strong>
+        </h2>   
+        <br>
+        <h3>Algo sobre mi</h3>
+        <video width="400" height="400" controls poster="Img/sobremi.jpg">
+            <source src="video/sobremi.mp4" type="video/mp4">
+            Your browser does not support the <code>video</code> tag.
+        </video>
+        <br>
+                <h3>Mis pasatiempos</h3>
+                <audio controls>
+                        <source src="audio/pasatiempo.mp3" type="audio/mpeg">
+                        Your browser does not support the <code>audio</code> tag.
+                </audio>
+                    <source src="audio/pasatiempo.mp3" type="äudio/mpeg">
+    <footer>
+        <h3>
+            Email: rangel@haristmo.net<br>
+            Teléfono: (507)66789810<br>
+            Dirección: Panamá, Rep. de Panamá, Puertas del Este.
+        </h3>
+    </footer>
     </body>
+
 </html>
